# collide

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/engine/: engine.h
src/engine/camera/: camera.cpp  camera.h
src/engine/collider/: collider.cpp  collider.h
src/engine/control/: check.cpp  control.h  player.cpp
src/engine/data/: data.cpp  data.h
src/engine/debug/: debug.cpp  debug.h  display.cpp  key.cpp  map.cpp  position.cpp  value.cpp
src/engine/display/: cursor.cpp  display.h  frame.cpp  window.cpp
src/engine/entity/: collision.cpp  entity.cpp  entity.h  movement.cpp
src/engine/extras/: extras.h  shape.cpp
src/engine/map/: map.cpp  map.h  tile.cpp
src/engine/math/: ease.cpp  math.cpp  math.h
src/engine/player/: player.cpp  player.h
src/game/: game.h  gameData.h  parse.cpp
src/res/icons/: generate.bat
